# chunithm_kadai_bot

./: .gitignore  README.md  main.py  new.txt  pyproject.toml  renewal.py
images/: jacket.yaml  scr.py
